completed todos aligned correctly

--- a/Components/Body/CompletedTodoList.module.css
+++ b/Components/Body/CompletedTodoList.module.css
@@ -14,21 +14,21 @@
 }
 
 .todoListItem {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   margin-bottom: 15px;
   padding: 10px;
   background-color: #f9f9f9;
   border: 1px solid #ddd;
   border-radius: 5px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
 .todoContent {
-  margin-bottom: 10px;
   display: flex;
-  justify-content: space-between;
-  width: 100%;
+  align-items: center;
+  gap: 10px;
+  flex: 1;
 }
 
 .todoTitle {
@@ -36,19 +36,12 @@
   font-size: 1.1rem;
 }
 
-.todoText {
-  flex: 1;
-  font-size: 1rem;
-  color: #212529;
-  font-weight: 500;
-}
-
 .todoButtons {
   display: flex;
+  align-items: center;
   gap: 10px;
 }
 
-.doneButton,
 .deleteButton {
   padding: 6px 12px;
   font-size: 1rem;
@@ -56,24 +49,12 @@
   border: none;
   border-radius: 5px;
   transition: background-color 0.3s ease, color 0.3s ease;
-}
-
-.doneButton:hover {
-  background-color: #084298;
+  background-color: #dc3545;
+  color: white;
 }
 
 .deleteButton:hover {
   background-color: #a71d2a;
-}
-
-.doneButton {
-  background-color: #0d6efd;
-  color: white;
-}
-
-.deleteButton {
-  background-color: #dc3545;
-  color: white;
 }
 
 @media (max-width: 768px) {
@@ -86,10 +67,8 @@
     width: 100%;
     flex-direction: column;
     gap: 5px;
-    justify-content: flex-start;
   }
 
-  .doneButton,
   .deleteButton {
     width: 100%;
   }
